[project]
name = "Bonbast-API"
version = "0.1.0"
authors = [
    {name = "AmirMohammad Hosseini Nasab", email = "awmirhn@gmail.com"},
]
dependencies = [
    "bonbast~=1.0.2",
    "fastapi~=0.111.0",
    "fastapi-cache2~=0.2.1",
    "httpx~=0.27.0",
    "uvicorn~=0.29.0",
    "beautifulsoup4~=4.12.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.1",
]
